objects/noduplicates__Auto_Merge_Field__c.object
<CustomObject>
    <fields>
        <fullName>noduplicates__Allow_Blank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>noduplicates__Cross_Field__c</fullName>
        <label>Cross Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noduplicates__Merge_Rule__c</fullName>
        <label>Merge Rule</label>
        <referenceTo>noduplicates__Merge_Rule__c</referenceTo>
        <relationshipLabel>Auto Merge Field</relationshipLabel>
        <relationshipName>Auto_Merge_Field</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>noduplicates__Number__c</fullName>
        <label>Number</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>noduplicates__Strategy__c</fullName>
        <label>Strategy</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Auto Merge Field</label>
    <nameField>
        <displayFormat>AMF-{000000}</displayFormat>
        <label>Auto Merge Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auto Merge Field</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>